# rcoredump

./: .editorconfig  .env  .gitattributes  .gitignore  .prettierrc.json  .travis.yml  BUILD  CHANGELOG.md  Makefile  README.md  RELEASE.md  WORKSPACE  go.mod  go.sum  package-lock.json  package.json  rcoredump.go  rcoredumpd.conf.example  tools.go
conf/: conf.go  conf_test.go
distrib/freebsd/rc.d/: rcoredumpd
examples/: README.md  rcoredump.conf  rcoredumpd.conf
pkg/auxv/: BUILD.bazel  auxv.go  auxv_amd64.go  auxv_test.go
pkg/auxv/testdata/: auxv  auxv.golden.json
pkg/conf/: BUILD.bazel  conf.go  conf_test.go
pkg/conf/testdata/: test.conf
pkg/elfx/: BUILD.bazel  elfx.go  elfx_amd64.go  elfx_test.go
pkg/elfx/testdata/: executable  executable_rpath  executable_runpath
pkg/rcoredump/: BUILD.bazel  rcoredump.go
pkg/testingx/: BUILD.bazel  testing.go
web/: App.css  App.js  App.scss  AppBoundary.js  Core.js  Core.scss  Footer.js  Footer.scss  Header.js  Header.scss  QueryLink.js  Searchbar.js  Searchbar.scss  Table.js  Table.scss  api.js  colors.scss  index.css  index.html  index.js  index.scss  index_dev.html  mixins.scss  package-lock.json  utils.js
web/public/: index.html
web/src/: App.js  index.js
