load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "conf",
    srcs = ["conf.go"],
    importpath = "github.com/elwinar/rcoredump/pkg/conf",
    visibility = ["//visibility:public"],
)

go_test(
    name = "conf_test",
    srcs = ["conf_test.go"],
    data = glob(["testdata/**"]),
    embed = [":conf"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
